--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>テストページ</title>
     <style type="text/css">
+
+
         a:link {
             text-decoration: none;
             color: #E6E6FA;
@@ -19,23 +21,32 @@
         }
 
         .center {
-            border: 1px solid gray;
             width: 420px;
-            margin-right: auto;
-            margin-left: auto;
+            cursor: url("img/penguin2.png")50 50, auto;
         }
+        .flex h2{
+            margin-bottom: 50px;
+            text-align: center;
+        }
+        .flex{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 650px;
+        }
+        
     </style>
 </head>
 
 <body>
-    <div class="center">
-        <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0"
-            frameborder="0" style="border:none;"></iframe>
-        <h2>遊び方</h2>
-        <p>ここに遊び方を書く。</p>
-        <h2>お借りした素材</h2>
-        <a href="http://～～～～">借りた素材のサイト名と、借りた素材内容を書く</a>
-        <br>
+    <div class="flex">
+        <div>
+            <h2>ペンギンに魚を食べさせるゲーム</h2>
+            <div class="center">
+                <iframe src="game.html" width=" 400" height="500" scrolling="no" marginwidth="0" marginheight="0"
+                    frameborder="0" style="border:none;"></iframe>
+            </div>
+        </div>
     </div>
 </body>
 
