--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=500px,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>テストページ</title>
+    <title>Penguin_Eat_Fishgame</title>
     <style type="text/css">
 
 
@@ -22,7 +22,6 @@
 
         .center {
             width: 420px;
-            cursor: url("img/penguin2.png")50 50, auto;
         }
         .flex h2{
             margin-bottom: 50px;
